--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -675,6 +675,32 @@
             </objects>
             <point key="canvasLocation" x="-301.44927536231887" y="143.97321428571428"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="kaV-36-8OJ">
+            <objects>
+                <viewController id="lxq-n4-NNJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RHl-N1-Esb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eggs" translatesAutoresizingMaskIntoConstraints="NO" id="BsZ-0z-Bc7">
+                                <rect key="frame" x="41" y="253" width="332" height="208"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Olt-gi-8F8">
+                                <rect key="frame" x="251" y="655" width="110" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="done button"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vcr-Qq-0Jk"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yXn-mQ-slN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="563.768115942029" y="146.65178571428569"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Arrow 1" width="24" height="16"/>
@@ -692,6 +718,8 @@
         <image name="Group 148" width="128" height="128"/>
         <image name="Group 149" width="128" height="128"/>
         <image name="Group 150" width="128" height="128"/>
+        <image name="done button" width="110" height="41"/>
+        <image name="eggs" width="188" height="188"/>
         <image name="homeIcon" width="37" height="35"/>
         <image name="profileIcon" width="28" height="28"/>
         <image name="progressIcon" width="34" height="34"/>
